MASTER: Corrected some responsive image alignments

--- a/css/src/style.less
+++ b/css/src/style.less
@@ -71,7 +71,6 @@ audio {
         .border-radius-top;
         background-image: url('../../assets/imgs/cover.jpg');
         background-position: top center;
-        background-size: 100%;
         background-repeat: no-repeat;
         
         img {
@@ -196,6 +195,7 @@ audio {
     #player { 
         .player-image {
             height: 500px;
+            background-size: cover;
         }
     }
 }
@@ -204,6 +204,7 @@ audio {
     #player { 
         .player-image {
             height: 300px;
+            background-size: cover;
         }
     }
 }
